Setup Travis and Rakefile for gem publishing.
Task ci:release will build and push the gem to rubygems.org if and only if it
encounters a version that it's not yet tagged.
Also, it will tinker with gem credentials file in order to allow setting API
key into an env var (which is needed if we want to make pushing the gem happen
in Travis).

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
+---
 language: ruby
 
 rvm:
-  - "1.9.3"
-  - "2.0.0"
+  - 1.9.3
+  - 2.0.0
 
-install: 'bundle install --path vendor/bundle'
+install: bundle install --path vendor/bundle
 
-script: 'bundle exec rake test:end_to_end'
+script:
+  - bundle exec rake test:end_to_end
+  - bundle exec rake ci:release
 
+env:
+  global:
+  - secure: |-
+      hqv8xbhavi/hJmU0iGJ86skmPy53UwUd04YHDeqNxSrSvngaPiPtXf/oXWM3
+      JBRl1lJr62MVOL4SJWm0DIW8Xp8d7s7nvu6Ib1CThGlpH6MCS8giTAhILkPm
+      FK6Bjh/a7jcFHjM0zuh8reev1BKtonmUhjkVfuW4QfXjc1465ls=
